<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.water.WaterActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:layout_marginBottom="16dp"
            app:titleTextColor="@color/lightGray"/>

        <include layout="@layout/water_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/fecal_coliform" />

        <EditText
            android:id="@+id/et_fc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/oxygen_o2" />

        <EditText
            android:id="@+id/et_o2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="pH Air (pH)" />

        <EditText
            android:id="@+id/et_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/total_suspended_sediment_tss" />

        <EditText
            android:id="@+id/et_tss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/temperature_temp" />

        <EditText
            android:id="@+id/et_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/nitrogen_n" />

        <EditText
            android:id="@+id/et_nitrogen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/phosphorus_p" />

        <EditText
            android:id="@+id/et_phosporus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/turbidity_turb" />

        <EditText
            android:id="@+id/et_turbidiy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_1_100"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="16dp" />

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/deteksi"
            android:textAllCaps="false"
            android:textColor="@color/lightGray"
            android:background="@drawable/btn_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/hasil"
            android:textColor="@color/btnColor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"/>

       <LinearLayout
           android:id="@+id/ll_result"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingHorizontal="8dp"
           android:paddingTop="21dp"
           android:background="@drawable/et_bg"
           android:layout_marginHorizontal="32dp"
           android:layout_marginTop="10dp"
           android:visibility="gone">

           <TextView
               android:id="@+id/tv_result"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="32dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="32dp"
               android:text="@string/sistem_kami_memprediksi_bahwa_kualitas_air_di_tempat_kamu"
               android:textColor="@color/btnColor"/>
       </LinearLayout>
    </LinearLayout>
</ScrollView>