<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.water.WaterActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:layout_marginBottom="16dp"
            app:titleTextColor="@color/lightGray"/>

        <include layout="@layout/air_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/partikulat_pm2_5" />

        <EditText
            android:id="@+id/et_pm25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/karbon_monoksida_co" />

        <EditText
            android:id="@+id/et_co"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/ozon_o3" />

        <EditText
            android:id="@+id/et_o3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/nitrogen_dioksida_no2" />

        <EditText
            android:id="@+id/et_no2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/etHint"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/et_bg"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="32dp"
            android:text="@string/deteksi"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@color/lightGray"
            android:background="@drawable/btn_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/hasil"
            android:textColor="@color/btnColor"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:id="@+id/ll_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="21dp"
            android:background="@drawable/et_bg"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/sistem_kami_memprediksi_bahwa_kualitas_air_di_tempat_kamu"
                android:textColor="@color/btnColor"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>